--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to EC2
 
 on:
   push:
-    branches: [ "main" ]          # change if your default branch is different
+    branches: [ "master" ]          # change if your default branch is different
   workflow_dispatch:              # allow manual trigger from Actions tab
 
 # Only one deploy at a time
